k3s/manifests/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: default
spec:
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.33.111.102
    ports:
      - port: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.33.111.102
    ports:
      - port: 3000
